@@ -5,6 +5,7 @@ import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
@@ -135,7 +136,7 @@ public class IngestedDataService {
                     .filter(r ->
                             Boolean.FALSE.equals(r.getHasFinishedData())
                          || Boolean.FALSE.equals(r.getFutureExists()))
-                    .toList();
+                    .collect(Collectors.toList());
         }
 
         // ===== paging =====
